Prevent flickering of label border + fixes

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -174,12 +174,13 @@ section {
 		cursor: pointer;
 	}
 
-* {
+button {
 	transition: all .3s;
 	-moz-transition: all .3s;
 	-webkit-transition: all .3s;
 	-o-transition: all .3s;
 }
+
 
 canvas {
 	display: none;
